--- a/package.json
+++ b/package.json
@@ -9,32 +9,47 @@
     "scss": "node-sass app/ -o app/",
     "scss:w": "npm run scss && node-sass app/ -wo app/",
     "prestart": "npm run clean",
-    "start": "concurrently \"npm run scss\" \"npm run scss:w\" \"tsc -w\" \"lite-server\" "
+    "start": "concurrently \"npm run scss\" \"npm run scss:w\" \"tsc -w\" \"lite-server\" ",
+	"ng": "ng",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
   "dependencies": {
-    "@angular/common": "~2.1.1",
-    "@angular/compiler": "~2.1.1",
-    "@angular/core": "~2.1.1",
-    "@angular/forms": "~2.1.1",
-    "@angular/http": "~2.1.1",
-    "@angular/platform-browser": "~2.1.1",
-    "@angular/platform-browser-dynamic": "~2.1.1",
-    "@angular/router": "~3.1.1",
-    "@angular/upgrade": "~2.1.1",
-    "angular-in-memory-web-api": "^0.1.17",
-    "core-js": "^2.4.1",
+    "@angular/common": "~12.2.0",
+    "@angular/compiler": "~12.2.0",
+    "@angular/core": "~12.2.0",
+    "@angular/forms": "~12.2.0",
+    "@angular/http": "~7.2.16",
+    "@angular/platform-browser": "~12.2.0",
+    "@angular/platform-browser-dynamic": "~12.2.0",
+    "@angular/router": "~12.2.0",
+    "@angular/upgrade": "~12.2.0",
+    "angular-in-memory-web-api": "^0.12.0",
+    "core-js": "^3.23.2",
     "reflect-metadata": "^0.1.9",
-    "rxjs": "5.0.0-beta.12",
-    "systemjs": "0.19.39",
-    "zone.js": "^0.6.25"
+    "rxjs": "~6.6.0",
+    "systemjs": "6.12.1",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.35",
-    "@types/node": "^6.0.58",
+	  "@angular-devkit/build-angular": "~12.2.17",
+    "@angular/cli": "~12.2.17",
+    "@angular/compiler-cli": "~12.2.0",
+    "@types/jasmine": "~3.8.0",
+    "@types/node": "^12.11.1",
+    "angular-in-memory-web-api": "^0.12.0",
+    "jasmine-core": "~3.8.0",
+    "karma": "~6.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "@types/core-js": "^2.5.5",
     "concurrently": "^3.0.0",
-    "lite-server": "^2.2.2",
-    "node-sass": "^3.13.1",
-    "rimraf": "^2.5.4",
-    "typescript": "^2.1.4"
+    "lite-server": "^2.6.1",
+    "node-sass": "^7.0.1",
+    "rimraf": "^3.0.2",
+    "typescript": "~4.3.5"
   }
 }
